# wd

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  install.sh  main.go  uninstall.sh
cmd/: root.go  version.go
repo/: init.go  query.go
repo/model/: model.go
src/: app.rs  main.rs
src/db/: init.rs  mod.rs  model.rs  models.rs  query.rs
src/entity/: mod.rs  stardict.rs
src/repo/: mod.rs  model.rs  query.rs
src/tui/: app.rs  event.rs  mod.rs  tui.rs  ui-view.txt  ui.rs
src/ui/: mod.rs  ui.rs
src/word/: word.rs
ui/: box_with_label.go  ui.go  word_input.go
