[package]
name = "wd"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre="0.6.2"
crossterm = "0.27.0"
ratatui = "0.25.0"
lazy_static = "1.4.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
dotenv="0.15.0"
tui-popup="0.2.2"
