[package]
name = "wd"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.26.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
futures = "0.3.28"
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
lazy_static = "1.4.0"
