[package]
name = "wd"
version = "0.4.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
log = "0.4.22"
tui-scrollview = "0.5.0"

[profile.release]
lto = true
